PORTAL-257  Scheduler rest implementation shouldn't keep full scheduler state
Changed the way how REST provides information about jobs.

Before this change special listener was used, on startup it received
full scheduler state and updated it using events mechanism
(MyCachingSchedulerProxyUserInterface). I completely removed this
listener and now jobs are received using direct scheduler API calls.
There is still scheduler event listener (see SchedulerStateListener
class), but it is used just to provide scheduler state revision and 
scheduler status, these two requests are frequently executed by the web
portal, so it makes sense to use cache for it. 

Others notable changes:
- removed PersistentMapConverter (it was needed before when scheduler
API returned objects contained hibernate PersistentMap) 
- changed return type of the 'get users' request to keep only
information used by the portal
- removed all requests returning full state
- removed 'lease renew' thread, it isn't needed since scheduler doesn't
expire session for clients with event listener
- removed parameters unneeded after this change
(scheduler.cache.refreshrate, lease.renew.rate)